Fixed line image in What We Do section and improved horizontal scrolling block.

--- a/styles/abstract/_base.scss
+++ b/styles/abstract/_base.scss
@@ -2,20 +2,8 @@
 @import '../components/_media-queries';
 
 html, body {
-  width: 1440px;
+  max-width: 100%;
   overflow-x: hidden;
-
   background: #FFFFFF;
   font-family: $standard-font;
-  @include tablet {
-    overflow-x: hidden;
-    width: 1025px;
-  }
-  @include mobile {
-    width: 376px;
-  }
-}
-
-body {
-  position: relative;
 }
