--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -3,6 +3,7 @@
 @import "../components/media-queries";
 
 #hero-page {
+  width: 100%;
   .hero-title-description-and-recent-work-button {
     z-index: 0;
 
