--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -17,7 +17,7 @@
     }
     @include mobile {
       position: absolute;
-      margin-top: 698px;
+      margin-top: 348px;
       width: 375px;
       height: 812px;
       z-index: 1;
