--- a/styles/components/_what-we-do.scss
+++ b/styles/components/_what-we-do.scss
@@ -3,6 +3,7 @@
 @import '../components/media-queries';
 
 #what-we-do-page {
+  width: 100%;
   @include mobile {
     background: #FFFFFF;
     display: flex;
@@ -139,6 +140,7 @@
   }
   
   .achievement {
+    width: 100%;
     margin-top: 56px;
     .achievement-title-description-and-successful-projects {
       display: flex;
@@ -249,8 +251,8 @@
     .line-2-image {
       position: absolute;
       
-      left: -30px;
-      width: 456.68px;
+      left: 0px;
+      width: 100%;
       height: 582.58px;
       z-index: 0;
     }
