--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,9 @@
 @import './reset.css';
 html, body {
-  width: 1440px;
+  max-width: 100%;
   overflow-x: hidden;
   background: #FFFFFF;
   font-family: "SF Pro Display", sans-serif;
-}
-@media screen and (max-width: 1025px) {
-  html, body {
-    overflow-x: hidden;
-    width: 1025px;
-  }
-}
-@media screen and (max-width: 376px) {
-  html, body {
-    width: 376px;
-  }
-}
-
-body {
-  position: relative;
 }
 
 #hero-navbar-container {
@@ -36,7 +21,7 @@ body {
 @media screen and (max-width: 376px) {
   #hero-navbar-container .hero-image-mobile {
     position: absolute;
-    margin-top: 698px;
+    margin-top: 348px;
     width: 375px;
     height: 812px;
     z-index: 1;
@@ -68,6 +53,9 @@ body {
   height: 12px;
 }
 
+#hero-page {
+  width: 100%;
+}
 #hero-page .hero-title-description-and-recent-work-button {
   z-index: 0;
   display: flex;
@@ -296,6 +284,9 @@ body {
   line-height: 24px;
 }
 
+#what-we-do-page {
+  width: 100%;
+}
 @media screen and (max-width: 376px) {
   #what-we-do-page {
     background: #FFFFFF;
@@ -411,6 +402,7 @@ body {
   color: #5468E7;
 }
 #what-we-do-page .achievement {
+  width: 100%;
   margin-top: 56px;
 }
 #what-we-do-page .achievement .achievement-title-description-and-successful-projects {
@@ -504,8 +496,8 @@ body {
 }
 #what-we-do-page .achievement-images .line-2-image {
   position: absolute;
-  left: -30px;
-  width: 456.68px;
+  left: 0px;
+  width: 100%;
   height: 582.58px;
   z-index: 0;
 }
